fixed div jump fix for iOS

--- a/static/css/vendor-prefix.css
+++ b/static/css/vendor-prefix.css
@@ -385,9 +385,12 @@ p, button, a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
   width: 100%;
-  position: fixed; }
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%); }
 
 .fileo-logo {
   display: -webkit-box;
