--- a/static/scss/pages/login.scss
+++ b/static/scss/pages/login.scss
@@ -11,11 +11,9 @@
 .landing-container {
 
     @include flex_column;
-    //height:100%;
+    height:100%;
     width:100%;
     position:fixed;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 // STYLES SHARED WITH PASSWORD RESET AND REGISTER PAGES //
